--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ping-centre",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A client for easily collecting events and metrics.",
   "main": "ping-centre.js",
   "license": "MPL-2.0",
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/mozilla/ping-centre#readme",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
-    "joi": "^10.0.1",
+    "joi-browser": "^10.0.6",
+    "node-fetch": "^1.6.3",
     "uuid": "^3.0.0"
   },
   "devDependencies": {
