--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "ping-centre",
+  "name": "@emtwo/ping-centre",
   "version": "1.0.0",
   "description": "A client for easily collecting events and metrics.",
   "main": "ping-centre.js",
   "license": "MPL-2.0",
   "scripts": {
-    "test": "npm-run-all test:*",
+    "bundle": "webpack",
+    "test": "npm run bundle && npm run test:node && npm run test:browser",
     "test:code": "make test",
+    "test:node": "istanbul cover _mocha -- --recursive",
+    "test:browser": "karma start test/karma.conf.js",
     "test:lint": "eslint ."
   },
   "repository": {
@@ -14,7 +17,6 @@
     "url": "git+https://github.com/mozilla/ping-centre.git"
   },
   "author": "Marina Samuel <msamuel@mozilla.com>",
-  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/mozilla/ping-centre/issues"
   },
@@ -23,14 +25,20 @@
     "isomorphic-fetch": "^2.2.1",
     "joi-browser": "^10.0.6",
     "node-fetch": "^1.6.3",
-    "uuid": "^3.0.0"
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "eslint": "^3.12.2",
     "fetch-mock": "^5.5.0",
+    "istanbul": "^0.4.5",
+    "karma": "^1.4.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.1.2",
-    "npm-run-all": "^3.1.1"
+    "webpack": "^2.2.1"
   }
 }
